--- a/index.html
+++ b/index.html
@@ -15,16 +15,12 @@
             Software Developer</p>
     </div>
     <div>
-        <div>
-            <a style="float:right" href="https://www.freecodecamp.org/nobodyly">
-                <img class="verticalCenter icon" src="Images/FreeCodeCamp.png" />
-            </a>
-        </div>
-        <div>
-            <a style="float:right" href="https://github.com/JacksonTenor">
-                <img class="verticalCenter icon" src="Images/github.png" />
-            </a>
-        </div>
+        <a style="float:right" href="https://www.freecodecamp.org/nobodyly">
+            <img class="verticalCenter icon" src="Images/FreeCodeCamp.png" />
+        </a>
+        <a style="float:right" href="https://github.com/JacksonTenor">
+            <img class="verticalCenter icon" src="Images/github.png" />
+        </a>
     </div>
 </div>
 
@@ -35,28 +31,28 @@
 <div class="contentRow">
     <div class="block">
         <h2 class="cardTitle">About Me</h2>
-        <div style="padding-bottom: 30px; display: block; margin: auto; height: 150px; width: 150px; overflow: hidden">
-            <img style="height: 150px; border-radius: 50%;" src="Images/myself.png" />
+        <div style="min-height: 140px;">
+            <img align="right" style="height: 150px; border-radius: 50%;" src="Images/myphoto.png" />
+            <p class="cardContent">
+                I'm Jackson Tenor, a Computer Science student at the University of Minnesota, Morris. I am currently looking for
+                web development work and summer internships in software engineering. I look forward to hearing from you!
+            </p>
         </div>
-        <p class="cardContent">
-            I'm Jackson Tenor, a Computer Science student at the University of Minnesota, Morris. I am currently looking for
-             web development work and summer internships in software engineering. I look forward to hearing from you!
-        </p>
     </div>
 
 
 </div>
-<div class="spacer">
+<div class="smallSpacer">
 </div>
 <div class="contentRow">
     <div class="smallRow" style="float:right;">
         <div class="block">
             <h2 class="cardTitle"> Skills </h2>
             <p class="cardContent">
-                Procrastinating <br>
-                Sleeping through alarms <br>
-                Naps <br>
-                Petting Cats
+                HTML<br>
+                CSS<br>
+                JavaScript<br>
+                Java
             </p>
         </div>
         <div class="smallSpacer">
@@ -90,13 +86,35 @@
                 </div>
             </div>
         </div>
+        <div class="smallSpacer">
+        </div>
+        <div class="block">
+            <h2 class="cardTitle"> Employment </h2>
+            <div class="cardContent">
+                <div>
+                    <h3>Briggs Library</h3>
+                    <p style="margin: 10px;">
+                        Tech Support Assistant<br>
+                        September 2017 - Present
+                    </p>
+                </div>
+                <div>
+                    <h3>Escape Room Wisconsin</h3>
+                    <p style="margin: 10px;">
+                        Game Master<br>
+                        May 2016- August 2017
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
+
     <div class="largeRow" style="float:left;">
         <div class="block">
             <h2 class="cardTitle"> Projects </h2>
             <div class="cardContent">
                 <div class="listItem">
-                    <img src="Images/icon.jpg" class="portfolioIcon"/>
+                    <img src="Images/games.png" class="portfolioIcon"/>
                     <div class="portfolioDesc">
                         <h3> Games: Simon and Tic Tac Toe </h3>
                         <p> I created the games Simon and Tic Tac Toe using only HTML, CSS, and Javascript. Simon used
@@ -118,15 +136,26 @@
                 <div class="listItem">
                     <img src="Images/icon.jpg" class="portfolioIcon"/>
                     <div class="portfolioDesc">
-                        <h3> Third Portfolio Project </h3>
-                        <p> I created something else! Can you believe it?</p>
+                        <h3> Future Portfolio Projects </h3>
+                        <p>I have projects planned for the near future, and I'll be sure to update when they're done.</p>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="smallSpacer">
+        </div>
+        <div class="block">
+            <h2 class="cardTitle"> Contact Me </h2>
+            <div class="cardContent">
+                If you're interested in my work and would like to talk, please contact me at tenorjackson@gmail.com
+            </div>
+        </div>
+    </div>
+    <div class="spacer">
+
     </div>
 
-
 </div>
+
 </body>
 </html>
