--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="listItem">
-                    <img src="Images/icon.jpg" class="portfolioIcon"/>
+                    <img src="Images/blank.png" class="portfolioIcon"/>
                     <div class="portfolioDesc">
                         <h3> Future Portfolio Projects </h3>
                         <p>I have projects planned for the near future, and I'll be sure to update when they're done.</p>
