--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                         <p> I created the games Simon and Tic Tac Toe using only HTML, CSS, and Javascript. Simon used
                             HTML's canvas, while Tic Tac Toe used buttons with onclick functions. These projects were a part of
                             my Free Code Camp Front End Certification. <br>
-                            <a href="https://github.com/JacksonTenor/Weather-App">View Tic Tac Toe on Github</a> <br>
-                            <a href="https://github.com/JacksonTenor/Weather-App">View Simon on Github</a></p>
+                            <a href="https://github.com/JacksonTenor/Tic-Tac-Toe">View Tic Tac Toe on Github</a> <br>
+                            <a href="https://github.com/JacksonTenor/Simon">View Simon on Github</a></p>
                     </div>
                 </div>
                 <div class="listItem">
